--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="projects-container">
                 <div class="project-card" data-category="full-stack">
                     <div class="project-img">
-                        <img src="/image/blog.png" alt="Blog Website">
+                        <img src="image/blog.png" alt="Blog Website">
                     </div>
                     <div class="project-content">
                         <h3>Blog Website</h3>
@@ -361,7 +361,7 @@
 
                 <div class="project-card" data-category="full-stack">
                     <div class="project-img">
-                        <img src="/image/Internship.jpg" alt="Internship Portal">
+                        <img src="image/Internship.jpg" alt="Internship Portal">
                     </div>
                     <div class="project-content">
                         <h3>Internship Portal</h3>
@@ -402,7 +402,7 @@
 
                 <div class="project-card" data-category="backend">
                     <div class="project-img">
-                        <img src="/image/crud.png" alt="CRUD API">
+                        <img src="image/crud.png" alt="CRUD API">
                     </div>
                     <div class="project-content">
                         <h3>CRUD Operations Using .NET Web API</h3>
