--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#achievements">Achievements</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-                <div class="theme-toggle">
-                    <i class="fas fa-sun"></i>
+                <div class="theme-toggle" style="margin-right: 20px;">
+                    <i class="fas fa-moon"></i>
                 </div>
                 <div class="hamburger">
                     <div class="bar"></div>
