--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <span class="info-text">B.Tech in CS&E (Full Stack)</span>
                         </div>
                     </div>
-                    <a href="abhishek_m.pdf" class="btn primary-btn download-cv" download>Download CV</a>
+                    <a href="Abhishek_m.pdf" class="btn primary-btn download-cv" download>Download CV</a>
                 </div>
                 <div class="about-image">
                     <!-- You can add another profile image or illustration here -->
