--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2019 - 2021</div>
+                    <div class="timeline-date"> 2020-2021</div>
                     <div class="timeline-content">
                         <h3>12th (Intermediate)</h3>
                         <h4>St. Mary's Hr. Sec. School, Madhya Pradesh</h4>
@@ -310,7 +310,7 @@
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2019</div>
+                    <div class="timeline-date">2018-2019</div>
                     <div class="timeline-content">
                         <h3>10th (Matriculation)</h3>
                         <h4>St. Mary's Hr. Sec. School, Madhya Pradesh</h4>
