--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abhishek Mishra - Portfolio</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Abhishek Mishra | Full Stack Developer & Problem Solver</title>
+    <meta name="description"
+        content="Abhishek Mishra is a Full Stack Developer specializing in web development, problem solving, and DSA. View projects, skills, and experience.">
+    <meta name="keywords"
+        content="Abhishek Mishra, Full Stack Developer, Web Developer, Problem Solver, Portfolio, Java, JavaScript, ReactJS, NodeJS,C++,JAVA">
+    <meta name="author" content="Abhishek Mishra">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://abhishek.ninja/">
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Abhishek Mishra | Full Stack Developer & Problem Solver">
+    <meta property="og:description"
+        content="Full Stack Developer specializing in web development and algorithm optimization. View my projects and skills.">
+    <meta property="og:url" content="https://abhishek.ninja/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://abhishek.ninja/assets/image/uriichi.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Abhishek Mishra | Full Stack Developer">
+    <meta name="twitter:description"
+        content="Full Stack Developer specializing in web development and algorithm optimization. View my projects and skills.">
+    <meta name="twitter:image" content="https://abhishek.ninja/assets/image/uriichi.png">
+
+    <!-- Stylesheets & Fonts (keep your existing links) -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-
-    <link rel="icon" href="assets/image/uriichi.png" type="assets/image/x-icon">
+    <link rel="icon" href="assets/image/uriichi.png" type="image/png">
 </head>
 
 <body>
