--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
                 <button class="filter-btn" data-filter="full-stack">Full Stack</button>
                 <button class="filter-btn" data-filter="frontend">Frontend</button>
                 <button class="filter-btn" data-filter="backend">Backend</button>
-                <button class="filter-btn" data-filter="simulation">simulation</button>
-                <button class="filter-btn" data-filter="systems">systems</button>
-                <button class="filter-btn" data-filter="security">security</button>
-                <button class="filter-btn" data-filter="automation">automation</button>
+                <button class="filter-btn" data-filter="simulation">Simulation</button>
+                <button class="filter-btn" data-filter="systems">Systems</button>
+                <button class="filter-btn" data-filter="security">Security</button>
+                <button class="filter-btn" data-filter="automation">Automation</button>
             </div>
 
             <div class="projects-container">
