--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
     <link rel="canonical" href="https://abhishek.ninja/">
+    <link rel="icon" type="image/png" href="https://abhishek.ninja/assets/image/uriichi.png">
 
     <meta property="og:title" content="Abhishek Mishra | Full Stack Developer & Problem Solver">
     <meta property="og:description"
