--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://karm-521b344d8715.herokuapp.com/" class="btn secondary-btn"><i
+                            <a href="https://karm-521b344d8715.herokuapp.com/" class="btn secondary-btn" target="_blank"><i
                                     class="fas fa-external-link-alt"></i> Live Demo</a>
                             <a href="https://github.com/abhishek-mishraji/Ambe_blog/" class="btn primary-btn"><i
                                     class="fab fa-github"></i> GitHub</a>
@@ -413,7 +413,7 @@
                             <span>Node.js</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://jwt-internship-full-stack.onrender.com/" class="btn secondary-btn"><i
+                            <a href="https://jwt-internship-full-stack.onrender.com/" class="btn secondary-btn" target="_blank"><i
                                     class="fas fa-external-link-alt"></i> Live Demo</a>
                             <a href="https://github.com/abhishek-mishraji/JWT_INTERNSHIP" class="btn primary-btn"><i
                                     class="fab fa-github"></i> GitHub</a>
@@ -440,7 +440,7 @@
                             <span>js</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://cybercrimepolice.me/index.php" class="btn secondary-btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://cybercrimepolice.me/index.php" class="btn secondary-btn" target="_blank"><i class="fas fa-external-link-alt" ></i> Live Demo</a>
                             <a href="#" class="btn primary-btn"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
@@ -462,8 +462,8 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://st-mary.stmary.tech/" class="btn secondary-btn">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            <a href="https://st-mary.stmary.tech/" class="btn secondary-btn" target="_blank" >
+                               <i class="fas fa-external-link-alt" ></i> Live Demo
                             </a>
                             <a href="https://github.com/abhishek-mishraji/Github_public_repos" class="btn primary-btn">
                                 <i class="fab fa-github"></i> GitHub
