--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/enhanced-projects.css">
+    <link rel="stylesheet" href="css/adsense.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="icon" href="assets/image/uriichi.png" type="image/png">
+    
+    <!-- Google AdSense Code - Replace with your actual AdSense code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3958044956648566"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -136,6 +141,22 @@
                     <!-- You can add another profile assets/image or illustration here -->
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- AdSense Ad Unit -->
+    <section class="ad-section">
+        <div class="container">
+            <!-- Google AdSense Ad Unit - Replace with your actual ad code -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                 data-ad-slot="XXXXXXXXXX"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
     </section>
 
@@ -723,6 +744,22 @@
             </div>
         </div>
 
+    </section>
+
+    <!-- AdSense Ad Unit - Bottom -->
+    <section class="ad-section">
+        <div class="container">
+            <!-- Google AdSense Ad Unit - Replace with your actual ad code -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                 data-ad-slot="XXXXXXXXXX"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
     </section>
 
     <!-- Footer -->
