--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -26,6 +26,8 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 50px 20px;
+
+            margin-top: 60px;
         }
 
         .policy-content h1 {
@@ -203,7 +205,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container" style="color: black;">
+        <div class="container" style="color: white;">
             <div class="back-to-top">
                 <p>&copy; 2025 Abhishek Mishra. All Rights Reserved.</p>
             </div>
