--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h2 class="typing-text"></h2>
                 <p>I build things for the web and solve complex problems with code.</p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn primary-btn">Contact Me</a>
+                    <a href="#contact" class="btn secondary-btn">Contact Me</a>
                     <a href="#projects" class="btn secondary-btn">View Projects</a>
                 </div>
                 <div class="social-icons">
