--- a/index.html
+++ b/index.html
@@ -788,12 +788,11 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-           
-                <p>
-                    &copy; <span id="copyright-year">2023</span> Abhishek Mishra. All Rights Reserved.
-             <a href="cookie-policy.html" id="privacy-settings">Privacy Settings</a>
-                </p>
-                 <div class="back-to-top"></div>
+            <div class="footer-content">
+                <div class="copyright">
+                    <p>&copy; 2025    Abhishek Mishra. All Rights Reserved.</p>
+                    <a href="cookie-policy.html" id="privacy-settings">Privacy Settings</a>
+                </div>
                 <a href="#home" class="top-arrow"><i class="fas fa-arrow-up"></i></a>
             </div>
         </div>
