--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/adsense.css">
     <link rel="stylesheet" href="css/privacy-button.css">
     <link rel="stylesheet" href="css/footer.css">
+    <!-- <link rel="stylesheet" href="css/button-fix.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -158,7 +159,7 @@
                             <span class="info-text">B.Tech in CS&E (Full Stack)</span>
                         </div>
                     </div>
-                    <a href="assets/pdf/Abhishek_m.pdf" class="btn primary-btn download-cv" download>Download CV</a>
+                    <a href="assets/pdf/Abhishek_m.pdf" class="btn secondary-btn download-cv" download><span>Download CV</span></a>
                 </div>
                 <div class="about-image">
                     <!-- You can add another profile assets/image or illustration here -->
@@ -434,7 +435,7 @@
                         <div class="project-links">
                             <a href="https://karm-521b344d8715.herokuapp.com/" class="btn secondary-btn" target="_blank"><i
                                     class="fas fa-external-link-alt"></i> Live Demo</a>
-                            <a href="https://github.com/abhishek-mishraji/Ambe_blog/" class="btn primary-btn"><i
+                            <a href="https://github.com/abhishek-mishraji/Ambe_blog/" class="btn secondary-btn"><i
                                     class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
@@ -459,7 +460,7 @@
                         <div class="project-links">
                             <a href="https://jwt-internship-full-stack.onrender.com/" class="btn secondary-btn" target="_blank"><i
                                     class="fas fa-external-link-alt"></i> Live Demo</a>
-                            <a href="https://github.com/abhishek-mishraji/JWT_INTERNSHIP" class="btn primary-btn"><i
+                            <a href="https://github.com/abhishek-mishraji/JWT_INTERNSHIP" class="btn secondary-btn"><i
                                     class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
@@ -485,7 +486,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://cybercrimepolice.me/index.php" class="btn secondary-btn" target="_blank"><i class="fas fa-external-link-alt" ></i> Live Demo</a>
-                            <a href="#" class="btn primary-btn"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="#" class="btn secondary-btn"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -509,7 +510,7 @@
                             <a href="https://st-mary.stmary.tech/" class="btn secondary-btn" target="_blank" >
                                <i class="fas fa-external-link-alt" ></i> Live Demo
                             </a>
-                            <a href="https://github.com/abhishek-mishraji/Github_public_repos" class="btn primary-btn">
+                            <a href="https://github.com/abhishek-mishraji/Github_public_repos" class="btn secondary-btn">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -530,7 +531,7 @@
                         <div class="project-links">
                             <!-- <a href="#" class="btn secondary-btn"><i class="fas fa-external-link-alt"></i> Live Demo</a> -->
                             <a href="https://github.com/abhishek-mishraji/CRUD_BY_API_DOTNET_SQL"
-                                class="btn primary-btn"><i class="fab fa-github"></i> GitHub</a>
+                                class="btn secondary-btn"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -548,7 +549,7 @@
                             <span>Python</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/abhishek-mishraji/Jarvish" class="btn primary-btn">
+                            <a href="https://github.com/abhishek-mishraji/Jarvish" class="btn secondary-btn">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -571,7 +572,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/abhishek-mishraji/File_Encryption_Decryption"
-                                class="btn primary-btn">
+                                class="btn secondary-btn">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -592,7 +593,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/abhishek-mishraji/Alogorithm-Simulation"
-                                class="btn primary-btn">
+                                class="btn secondary-btn">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -613,7 +614,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/abhishek-mishraji/Mermory_allocation_First_best_and_Worst_Fit"
-                                class="btn primary-btn">
+                                class="btn secondary-btn">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -759,8 +760,8 @@
                         <div class="form-group">
                             <textarea id="message" placeholder="Your Message" required></textarea>
                         </div>
-                        <button type="submit" class="btn primary-btn">
-                            <i class="fas fa-paper-plane"></i> Send Message
+                        <button type="submit" class="btn secondary-btn">
+                            <i class="fas fa-paper-plane"></i> <span>Send Message</span>
                         </button>
                     </form>
                 </div>
