Simplified cookie consent implementation to only include necessary elements

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -213,6 +213,7 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/cookie-consent.js"></script>
     <script>
         // Simple script to handle theme toggle
         document.querySelector('.theme-toggle').addEventListener('click', function() {
