--- a/index.html
+++ b/index.html
@@ -801,6 +801,7 @@
 
     <script src="js/script.js"></script>
     <script src="js/enhanced-projects.js"></script>
+    <script src="js/cookie-consent.js"></script>
    
 </body>
 
