--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="icon" href="assets/image/uriichi.png" type="image/png">
-    
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+
     <!-- Google AdSense Code with TCF Integration -->
     <script async src="https://fundingchoicesmessages.google.com/i/pub-3958044956648566?ers=1" nonce="RANDOMSTR1NG"></script>
     <script nonce="RANDOMSTR1NG">
@@ -70,6 +73,9 @@
 </head>
 
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-3958044956648566">
+</amp-auto-ads>
     <!-- Header & Navigation -->
     <header>
         <div class="container">
@@ -174,8 +180,8 @@
             <!-- Google AdSense Ad Unit - Replace with your actual ad code -->
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-                 data-ad-slot="XXXXXXXXXX"
+                 data-ad-client="ca-pub-3958044956648566"
+                 data-ad-slot="3958044956648566"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
