Fix privacy settings button to work with Google CMP when deployed

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                     <a href="cookie-policy.html" id="privacy-settings">Privacy Settings</a>
                     <a href="#" id="direct-privacy-control" style="margin-left: 15px;">Cookie Preferences</a>
                 </div>
-                <a href="home" class="top-arrow"><i class="fas fa-arrow-up"></i></a>
+                <a href="#home" class="top-arrow"><i class="fas fa-arrow-up"></i></a>
             </div>
         </div>
     </footer>
