Fix privacy settings button to work with Google CMP when deployed

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                 <div class="copyright">
                     <p>&copy; 2025    Abhishek Mishra. All Rights Reserved.</p>
                     <a href="cookie-policy.html" id="privacy-settings">Privacy Settings</a>
-                    <a href="#" id="direct-privacy-control" style="margin-left: 15px;">Cookie Preferences</a>
+                    <a href="#" id="direct-privacy-control" style="margin-left: 15px; display: none;">Cookie Preferences</a>
                 </div>
                 <a href="#home" class="top-arrow"><i class="fas fa-arrow-up"></i></a>
             </div>
